gulBil.html oprettet

--- a/animation.html
+++ b/animation.html
@@ -40,10 +40,11 @@
             <div class="container">
 
                 <div class="image">
-                    <img src="pictures/animation/gulBil_start.png">
+                    <img src="pictures/animation/gulBilSucces.png">
                 </div>
                 <div class="text right">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt laudantium alias incidunt consectetur iure quod dignissimos delectus? Laborum, facilis nostrum. Porro repellendus dolores nam recusandae, nulla commodi. Maiores, accusantium, animi!Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, alias! Deserunt, minus consectetur deleniti dolores aut vel ab maiores aliquid adipisci fuga. Adipisci facere officia, temporibus cupiditate iste molestiae nihil!</p>
+                    <a href="gulBil.html">Se spillet</a>
                 </div>
             </div>
 
@@ -58,12 +59,16 @@
                 </div>
             </div>
 
+            <!--
+            <div id="spilwrapper">
+                <iframe src="index_spil.html" height="700" width="1200"></iframe>
+            </div>
+-->
+
         </div>
     </section>
 
 
 
     <script src="portfolio.js"></script>
-</body>
-
-</html>
+</body></html>
